Make next button override Repeat::One

This adds a forceNext parameter to skipNextTrack so that it
can go to the next track in spite of Repeat::One when the user
explicitly clicked the next button.

BUG: 475743